--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,7 +56,7 @@ button {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 10px 20px;
   border-radius: 10px;
-  width: 320px;
+  width: 300px;
 }
 .post-title {
   font-size: 20px;
@@ -264,7 +264,7 @@ a:hover, button:hover {
   margin-left: 10px;
 }
 .premium-box {
-  width: 40%;
+  width: 60%;
   border: 1px solid black;
   margin: 0 auto;
   margin-top: 70px;
@@ -299,6 +299,9 @@ a:hover, button:hover {
 @media screen and (min-width: 1400px) {
   .premium-box {
     width: 60%;
+  }
+  .post-box {
+    width: 320px;
   }
 }
 
