--- a/views/user/public-profile.ejs
+++ b/views/user/public-profile.ejs
@@ -14,7 +14,12 @@
         <div class="center flex">
           <img src="<%= profileImg ? '/' + profileImg : 'https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png' %>" alt="profile" class="profile-lg">
         </div>
-        <h2 class="text-center"><%= postsArr[0].userId.username %></h2>
+        <div class="flex center">
+          <h2 class="text-center"><%= postsArr[0].userId.username %></h2>
+          <% if(userInfo.isPremium) { %>
+          <i class="fa-solid fa-star fa-fade fa-lg" style="color: #efd00b; margin-left: 5px;"></i>
+          <% } %>
+        </div>
         </div>
     </div>
     <div class="post-container">
