--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,6 +295,20 @@ a:hover, button:hover {
   font-size: 16px;
   border: 0;
 }
+.img-link {
+  margin: 10px 0;
+  color: black;
+  background: transparent;
+  padding: 0px;
+  width: fit-content;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.img-link:hover {
+  background: none;
+  transform: translateY(-5px);
+  transition: 0.2s;
+}
 
 @media screen and (min-width: 1400px) {
   .premium-box {
