grant premium access d-74

--- a/views/template/template.html
+++ b/views/template/template.html
@@ -8,7 +8,7 @@
 <body>
     <h3>Author - {{post.userId.username}}</h3>
     <h4>{{post.title}}</h4>
-    <img src="http://localhost:8080/{{post.imgUrl}}" alt="{{post.title}}" height="500" width="100%" />
+    <img src="http://localhost:8080/{{post.imgUrl}}" alt="{{post.title}}" class="object-fit" width="100%" />
     <p>{{post.description}}</p>
 </body>
 </html>
