--- a/views/details.ejs
+++ b/views/details.ejs
@@ -6,7 +6,7 @@
   </div>
     <% if(isLogin) { %>
   <div class="flex gap-15">
-    <p class="text-white">Hello, <%= currentUser %></p>
+    <p class="text-white">Hello, <%= currentUser.username %></p>
     <div>
     <a href="/admin/create-post">Add a new post</a>
   </div>
@@ -34,15 +34,23 @@
   </div>
   <div class="flex space-between">
     <div>
-      <p class="flex">
+      <div class="flex center">
         <img src="<%= post.userId.img ? '/' + post.userId.img : 'https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png' %>" alt="profile" class="profile-sm">
-        <span><%= post.userId.email %></span></p>
+        <div class="flex">
+        <span><%= post.userId.username %></span></p>
+        <% if(isPremium) { %>
+          <i class="fa-solid fa-star fa-fade fa-lg" style="color: #efd00b; margin-left: 5px;"></i>
+          <% } %>
+        </div>
+      </div>
       <% if(date) { %>
       <p class="mt-10 flex ml-10"><i class="fa-regular fa-calendar-days"></i> <span class="ml-10"><%= date %></span></p>
       <% } %>
     </div>
     <div class="flex">
-    <a class="download mr-10" href="/save/<%= post._id %>"><i class="fa-solid fa-file-arrow-down"></i></a>
+    <% if(isPremium) { %>
+      <a class="download mr-10" href="/save/<%= post._id %>"><i class="fa-solid fa-file-arrow-down"></i></a>
+    <% } %>
     <% if(post.userId._id.toString() == currentLoginUserId.toString()) { %>
       <div class="flex f-end gap-15">
         <div>
