--- a/views/user/premium-details.ejs
+++ b/views/user/premium-details.ejs
@@ -1,6 +1,6 @@
 <%- include("../includes/head") %> <%- include("../includes/navbar") %>
 <section class="mx-auto pt-40">
-  <a href="/admin/profile/<%= user._id %>" class="ml-auto">Go back</a>
+  <a href="/admin/profile/<%= user._id %>" class="ml-auto"><i class="fa-solid fa-chevron-left"></i></a>
     <div class="premium-details">
         <table width=""100%>
                 <tr>
